Fix missing avatar-group spacing.

--- a/packages/ui/lit-ui/src/dx-avatar/dx-avatar.pcss
+++ b/packages/ui/lit-ui/src/dx-avatar/dx-avatar.pcss
@@ -1,5 +1,5 @@
 .dx-avatar-group {
-  @apply inline-flex items-center;
+  @apply inline-flex items-center pie-2;
 }
 
 .dx-avatar-group .dx-avatar {
